--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,9 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Setup .Net Core 6.0 SDK
-      uses: actions/setup.dotnet@v1
+      uses: actions/setup-dotnet@2.1.0
       with:
-        dotnet-version: 3.1
+        dotnet-version: 6.0
     
     - name: Publish .NET Core Project 
       run: dotnet publish AdafyBlazorApp.csproj -c Release -o release --nologo
