--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v2.1.0
       with:
-        dotnet-version: 6.0
+        dotnet-version: '6.0.x'
     
     - name: Publish .NET Core Project 
       run: dotnet publish AdafyBlazorApp.csproj -c Release -o release --nologo
