--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,20 @@ jobs:
     - name: Publish .NET Core Project 
       run: dotnet publish AdafyBlazorApp.csproj -c Release -o release --nologo
       
+    - name: Change base-tag in index.html from / to AdafyBlazorApp
+      run: | 
+        sed -i ‘s/<base href=”\/” \/>/<base href=”\/AdafyBlazorApp\/” \/>/g’ release/wwwroot/index.html
+        
+    - name: copy index.html to 404.html
+      run: | 
+        cp release/wwwroot/index.html release/wwwroot/404.html
+        
+    - name: Add .nojekyll file
+      run: touch release/wwwroot/.nojekyll
+        
     - name: Commit wwwroot to Github Pages
       uses: JamesIves/github-pages-deploy-action@v4.3.3
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        branch: gh-pages
-        folder: release/wwwroot
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: release/wwwroot
